--- a/shawn_blog/templates/home.html
+++ b/shawn_blog/templates/home.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>{{title}}</title>
 </head>
 <body>
-
+    <p>I am {{name}}</p>
 </body>
 </html>
