add delete blog modle and havv bulit the basic the blog system

--- a/shawn_blog/templates/base.html
+++ b/shawn_blog/templates/base.html
@@ -12,7 +12,7 @@
 
       <div id="header">
         <div style="float:right">
-            <a href="/edit/">{{ _("New post") }}</a>
+            <a href="/edit">{{ _("New post") }}</a>
         </div>
         <h1><a href="/">{{ escape(handler.settings["blog_title"]) }}</a></h1>
       </div>
