--- a/shawn_blog/static/blog.css
+++ b/shawn_blog/static/blog.css
@@ -136,3 +136,18 @@ a code {
   height: 500px;
   line-height: 16pt;
 }
+
+ul.archive {
+    list-style-type: none;
+     margin: 0;
+     padding: 0;
+}
+
+ul.archive li {
+    margin-bottom: 1em;
+}
+
+ul.archive .title {
+    font-family: "Helvetica Nue", Helvetica, Arial, sans-serif;
+    font-size: 14pt;
+}
