--- a/shawn_blog/templates/outline.html
+++ b/shawn_blog/templates/outline.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-</head>
-<body>
+{% extends base.html %}
 
-</body>
-</html>
+{% block body %}
+  <ul class="archive">
+    {% for article in articles %}
+      <li>
+        <div class="title"><a href="/article/{{ article['slug'] }}">{{ article['title'] }}</a></div>
+        <div class="date">{{ article['published'] }}</div>
+      </li>
+    {% end %}
+  </ul>
+{% end %}
