--- a/shawn_blog/templates/detail.html
+++ b/shawn_blog/templates/detail.html
@@ -5,9 +5,11 @@
   <h1><a href="/article/{{ article['slug'] }}">{{ article['title'] }}</a></h1>
   <div class="date">{{ article['published'] }}</div>
   <div class="body">{% raw article['html'] %}</div>
-  <div class="admin">
-      <a href="/edit?id={{ article['id'] }}">{{ _("Edit this post") }}</a>
-      <a href="/delete?id={{ article['id'] }}">{{ _("Delete this post") }}</a>
-  </div>
+  {% if current_user %}
+    <div class="admin">
+        <a href="/edit?id={{ article['id'] }}">{{ _("Edit this post") }}</a>
+        <a href="/delete?id={{ article['id'] }}">{{ _("Delete this post") }}</a>
+    </div>
+  {% end %}
 </div>
 {% end %}
