--- a/shawn_blog/templates/home.html
+++ b/shawn_blog/templates/home.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-</head>
-<body>
-    <p>I am {{name}}</p>
-</body>
-</html>
+{% extends base.html%}
+
+{% block body %}
+        <img src="{{ static_url('media/image/bg.jpg') }}" width="100%" height="100%">
+{% end %}
