--- a/shawn_blog/templates/base.html
+++ b/shawn_blog/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>{{ escape(handler.settings["blog_title"]) }}</title>
+    <title>{{ str(handler.settings["blog_title"]) }}</title>
     <link rel="stylesheet" href="{{ static_url('blog.css') }}" type="text/css"/>
     <link rel="alternate" href="/feed" type="application/atom+xml" title="{{ escape(handler.settings['blog_title']) }}"/>
     {% block head %}{% end %}
@@ -18,7 +18,7 @@
             <a href="/auth/login?next={{ url_escape(request.uri) }}">{{ _("Login")}}</a>
             {% end %}
         </div>
-        <h1><a href="/">{{ escape(handler.settings["blog_title"]) }}</a></h1>
+        <h1><a href="/">{{ str(handler.settings["blog_title"]) }}</a></h1>
       </div>
 
       <div id="content">{% block body %}{% end %}</div>
