--- a/shawn_blog/templates/home.html
+++ b/shawn_blog/templates/home.html
@@ -1,5 +1,38 @@
-{% extends base.html%}
-
-{% block body %}
-        <img src="{{ static_url('media/image/bg.jpg') }}" width="100%" height="100%">
-{% end %}
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head profile="http://gmpg.org/xfn/11">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>{{ str(handler.settings["blog_title"]) }} | Just Do It.</title>
+    <link rel="icon" href="media/image/bg.jpg" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="{{ static_url('style.css') }}">
+    <script type="text/javascript" src="{{ static_url('shawn.js') }}"></script>
+</head>
+<body>
+<div id="page">
+    <div id="container1" style="left: 0px; height: 469px;">
+        <div id="logo">
+            <a title="back_home" href="/"><b></b>Shawn<i>©</i></a>
+        </div>
+        <div class="search_site addapted">
+            <form id="search_form" method="get" action="/">
+                <input type="submit" value="" id="search_submit" class="button">
+                <input type="text" id="s" name="s" value="">
+                <span>Search</span>
+            </form>
+        </div>
+        <div id="nav">
+            <a href="/programming_language" style="margin-top: 9.375px;"><b style="height: 30.625px;"></b>Language</a>
+            <a href="/operating_system" style="margin-top: 9.375px;"><b style="height: 30.625px;"></b>Operating System</a>
+            <a href="/database" style="margin-top: 9.375px;"><b style="height: 30.625px;"></b>Database</a>
+            <a href="/network" style="margin-top: 9.375px;"><b style="height: 30.625px;"></b>Network</a>
+            <a href="/algorithm" style="margin-top: 9.375px;"><b style="height: 30.625px;"></b>Algorithm</a>
+            <a href="/my_life" style="margin-top: 9.375px; margin-left: 0px;"><b style="height: 30.625px;"></b>My Life</a>
+            <a href="/other" style="margin-top: 9.375px; margin-left: 0px;"><b style="height: 30.625px;"></b>Other</a>
+            <a href="/about" style="margin-top: 9.375px; margin-left: 0px;"><b style="height: 30.625px;"></b>About me</a>
+        </div>
+        <div>
+        </div>
+        <div id="footer">Copyright © 2013-2014 <a href="http://www.loencn.com/">Shawn's Blog</a></div>
+    </div>
+</div>
+</body>
+</html>
