complete the web pages ,will do fix the DB

--- a/shawn_blog/static/blog.css
+++ b/shawn_blog/static/blog.css
@@ -1,3 +1,11 @@
+textarea {
+    font-size:16pt;
+    border-width:1px;
+    border-style:solid;
+    padding:8px;
+    border-color:#0088dd;
+}
+
 a:link {
     color: #3b5998;
     text-decoration:none;
