--- a/shawn_blog/templates/detail.html
+++ b/shawn_blog/templates/detail.html
@@ -1,15 +1,39 @@
 {% extends "base.html" %}
 
 {% block body %}
-<div class="article">
-  <h1><a href="/article/{{ article['slug'] }}">{{ article['title'] }}</a></h1>
-  <div class="date">{{ article['published'] }}</div>
-  <div class="body">{% raw article['html'] %}</div>
-  {% if current_user %}
-    <div class="admin">
-        <a href="/edit?id={{ article['id'] }}">{{ _("Edit this post") }}</a>
-        <a href="/delete?id={{ article['id'] }}">{{ _("Delete this post") }}</a>
-    </div>
-  {% end %}
-</div>
+<ul class="post-951 post type-post status-publish format-standard hentry category-my_live tag-76" id="post-951">
+    <li>
+        <div class="post_date" style="background: rgb(39, 170, 226);">
+            <span class="date_d">{{ art_date.day }}</span>
+            <span class="date_ym">{{ art_date.year }}.{{ art_date.month }}</span>
+        </div>
+        <div class="article">
+            <h2><a href="/article/{{ article['slug'] }}" title="{{article['title']}}" style="margin-left: 0px;">{{ article['title'] }}</a>
+                <span class="new" style="margin-left: 8px;"></span>
+            </h2>
+            <div style="float: right; width: 130px; font-size:120%;">
+                {% if current_user %}
+                    <div>
+                        <a href="/edit?id={{ article['id'] }}">{{ _("Edit") }}</a>&nbsp &nbsp &nbsp
+                        <a href="/delete?id={{ article['id'] }}">{{ _("Delete") }}</a>
+                    </div>
+                {% end %}
+            </div>
+
+            <div class="infotop" style="margin-left: 10px;color:#0088dd">
+                <span>Author:<a href="/" >Shawn</a></span>&nbsp
+                <span >Type:<a href="/">todo</a></span>&nbsp
+                <span >Read:<a href="/">todo</a></span>&nbsp
+                <span >Reply:<a href="/">todo</a></span>
+            </div>
+
+            <div class="entry_post">
+                <span>{{ article['markdown'] }}</span>
+
+                <div class="clear"></div>
+            </div>
+        </div>
+    </li>
+</ul>
+<div class="clear"></div>
 {% end %}
