--- a/shawn_blog/templates/delete.html
+++ b/shawn_blog/templates/delete.html
@@ -11,7 +11,7 @@
 <body>
 <h> DELETE SUCCESS!</h>
 <div>
-    <a href="/outline">{{_("GO TO OUTLINE")}}</a>
+    <a href="/">{{_("GO TO OUTLINE")}}</a>
 </div>
 </body>
 </html>
