--- a/shawn_blog/templates/detail.html
+++ b/shawn_blog/templates/detail.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block top %}
+        <a href="/type/{{article['type']}}">{{article['type']}}</a>
+{% end %}
+
 {% block body %}
 <ul class="post-951 post type-post status-publish format-standard hentry category-my_live tag-76" id="post-951">
     <li>
