--- a/shawn_blog/templates/type.html
+++ b/shawn_blog/templates/type.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block top %}
-        <a href="/">home</a>
+        <a href="/type/{{type_}}">{{type_}}</a>
 {% end %}
 
 {% block body %}
