fix the two artcile dispaly problem

--- a/shawn_blog/templates/base.html
+++ b/shawn_blog/templates/base.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://gmpg.org/xfn/11">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8; width=device-width">
     <title>{{ str(handler.settings["blog_title"]) }} | Just Do It.</title>
     <link rel="icon" href="media/image/bg.jpg" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('style.css') }}">
