--- a/shawn_blog/static/style.css
+++ b/shawn_blog/static/style.css
@@ -40,11 +40,24 @@
 .post_date .date_ym{text-align:center;font-weight:bold;margin-top:-3px;font-size:15px;font-family:Arial,Tahoma,Geneva}
 
 .article{_margin-top:-16px;*margin-top:-16px;display:block;overflow:hidden;border-bottom:1px #ddd solid}
+.article_detail{_margin-top:-16px;*margin-top:-16px;height:100%;display:block;overflow:hidden;border-bottom:1px #ddd solid}
 .article_b{overflow:hidden;border-bottom:1px #ddd solid}
 .article_b .tagleft{height:20px;border-left:#72B332 8px solid}
 .article li{list-style:none}
+.article_detail{list-style:none}
 .articles {padding:10px 0 10px 0;overflow:hidden}
 .article h2{
+margin-left:8px;
+margin-top:0px;
+height:28px;
+overflow:hidden;
+line-height:28px;
+display:block;
+font-size:24px;
+padding-left:5px;
+font-weight:normal}
+
+.article_detail h2{
 margin-left:8px;
 margin-top:0px;
 height:28px;
