fix the raw display of text (this is a html)

--- a/shawn_blog/templates/detail.html
+++ b/shawn_blog/templates/detail.html
@@ -31,9 +31,8 @@
                 <span >Reply:<a href="/">todo</a></span>
             </div>
             <br />
-            <div class="entry_post">
-                <span>{{ article['markdown'] }}</span>
-
+            <div class="entry_post" id="entry_post">
+                <span> {% raw article['html'] %}</span>
                 <div class="clear"></div>
             </div>
         </div>
