add the search fuction(in title)

--- a/shawn_blog/templates/base.html
+++ b/shawn_blog/templates/base.html
@@ -22,9 +22,9 @@
             <a title="back_home" href="/"><b></b>Shawn<i>©</i></a>
         </div>
         <div class="search_site addapted">
-            <form id="search_form" method="get" action="/">
+            <form id="search_form" method="get" action="/search/">
                 <input type="submit" value="" id="search_submit" class="button">
-                <input type="text" id="s" name="s" value="">
+                <input type="text" id="s" name="search_text" value="">
                 <span>Search</span>
             </form>
         </div>
